packages/placeholder/style.module.css
/**
 * Copyright (c) HashiCorp, Inc.
 * SPDX-License-Identifier: MPL-2.0
 */

.box {
  background-color: var(--placeholder-bg-color, var(--gray-6));
  border-radius: 2px;
  margin-bottom: 12px;
  width: 100%;
  max-width: 100%;
  background-repeat: no-repeat;
  background-image: linear-gradient(
    90deg,
    rgba(211, 211, 211, 0) 0,
    rgba(211, 211, 211, 0.25) 50%,
    rgba(211, 211, 211, 0) 100%
  );
  background-position: -300% 0;
  background-size: 75%;
  animation: loading 2s infinite;
}

@keyframes loading {
  to {
    background-position: 400% 0;
  }
}

.prose {
  margin: 20px 0;

  & .box {
    height: 1rem;
    margin-bottom: 10px;
    display: block;
  }
}

